--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-  	"start": "node app.js",
-  	"start:dev": "nodemon --ext js,graphql app.js",
+    "start": "node app.js",
+    "start:dev": "nodemon --ext js,graphql app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "graphql": "^14.7.0",
     "graphql-import": "^1.0.2",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "slugify": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
