--- a/package.json
+++ b/package.json
@@ -2,19 +2,17 @@
   "name": "duty-pharmacy-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
-
     "node-fetch": "^2.6.0",
     "slugify": "^1.4.4"
   },
